
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int PTRACE_TRACEME ;
 int exit (int) ;
 int fileno (int ) ;
 scalar_t__ ptrace (int ,int ,int ,int ) ;
 int stdout ;
 int write (int ,char*,int) ;

void
ptrace_trap(void) {
    if (ptrace(PTRACE_TRACEME, 0, 0, 0) < 0) {
        write(fileno(stdout), "Segmentation fault\n", 19);
        exit(-1);
    }
}
