; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_18221.c_ptrace_trap.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_18221.c_ptrace_trap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PTRACE_TRACEME = common dso_local global i32 0, align 4
@stdout = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [20 x i8] c"Segmentation fault\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ptrace_trap() #0 {
  %1 = load i32, i32* @PTRACE_TRACEME, align 4
  %2 = call i64 @ptrace(i32 %1, i32 0, i32 0, i32 0)
  %3 = icmp slt i64 %2, 0
  br i1 %3, label %4, label %9

4:                                                ; preds = %0
  %5 = load i32, i32* @stdout, align 4
  %6 = call i32 @fileno(i32 %5)
  %7 = call i32 @write(i32 %6, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0), i32 19)
  %8 = call i32 @exit(i32 -1) #3
  unreachable

9:                                                ; preds = %0
  ret void
}

declare dso_local i64 @ptrace(i32, i32, i32, i32) #1

declare dso_local i32 @write(i32, i8*, i32) #1

declare dso_local i32 @fileno(i32) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
